# Avalia-Governos

./: README.md  pyproject.toml
analysis/: visualization.ipynb
data/: Pesquisa Datafolha (Folha de SP 21-03-2024) Avaliação Governos - Pesquisa Datafolha (Folha de SP 21-03-2024) Avaliação Governos.csv
