[tool.poetry]
name = "avalia-governos"
version = "0.1.0"
description = "governament data visualization"
authors = ["Lucas Lago <lukemartinslagonit@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
matplotlib = "^3.9.1.post1"
plotly = "^5.23.0"
nbformat = "^5.10.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
